# data-structures

array/: CMakeLists.txt  circular_array.cpp  circular_array.h  circular_iterator.cpp  circular_iterator.h  iterator.cpp  iterator.h  main.cpp
hash/: CMakeLists.txt  chain_hash.h  main.cpp  smalldata.csv
heap/: CMakeLists.txt  heap.h  main.cpp
list/: CMakeLists.txt  forward_list.cpp  forward_list.h  main.cpp  node.cpp  node.h
list/bidirectional/: bidirectional_iterator.cpp  bidirectional_iterator.h  bidirectional_list.cpp  bidirectional_list.h  bidirectional_node.cpp  bidirectional_node.h
list/circular/: circular_iterator.h  circular_list.h  circular_node.h
list/forward/: forward_iterator.cpp  forward_iterator.h  forward_list.cpp  forward_list.h  forward_node.cpp  forward_node.h  node.cpp  node.h
stack/: CMakeLists.txt  main.cpp  stack.h
trees/: CMakeLists.txt  alumno.h  main.cpp
trees/BSTree/: binary_node.h  binary_search_node.h  binary_search_tree.h
